# pccl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh
.github/workflows/: cmake-multi-platform.yml  lsan.supp  publish.yml  stresstest.yml
ccoip/: CMakeLists.txt
ccoip/cmake_hacks/: dummy.cpp
ccoip/internal/: alloc.hpp  bandwidth_store.hpp  benchmark_runner.hpp  ccoip_client_handler.hpp  ccoip_inet_utils.hpp  ccoip_master.hpp  ccoip_master_handler.hpp  ccoip_packets.hpp  network_order_utils.hpp  piquant_utils.hpp  quantize.hpp  quantize_kernels.hpp  reduce_kernels.hpp  thread_guard.hpp  topology_optimizer.hpp  uuid_utils.hpp
ccoip/internal_include/: ccoip_client.hpp  ccoip_client_handler.hpp  ccoip_client_state.hpp  ccoip_inet_utils.hpp  ccoip_master.hpp  ccoip_master_handler.hpp  ccoip_master_state.hpp  ccoip_packet.hpp  ccoip_packet_buffer.hpp  ccoip_shared_state.hpp  ccoip_types.hpp  guard_utils.hpp  hash_utils.hpp  reduce.hpp  type_utils.hpp
ccoip/public_include/: ccoip.h  ccoip_inet.h
ccoip/src/: bandwidth_store.cpp  benchmark_runner.cpp  ccoip_client.cpp  ccoip_client_handler.cpp  ccoip_client_state.cpp  ccoip_master.cpp  ccoip_master_handler.cpp  ccoip_master_state.cpp  ccoip_packet_buffer.cpp  ccoip_packets.cpp  crc32.cpp  fvn1a_hash.cpp  quantize.cpp  quantize_kernels.cpp  reduce.cpp  reduce_kernels.cpp  topolgy_optimizer.cpp  uuid_utils.cpp
ccoip/src/cpp/: alloc.cpp  bandwidth_store.cpp  benchmark_runner.cpp  ccoip_client.cpp  ccoip_client_handler.cpp  ccoip_client_state.cpp  ccoip_master_handler.cpp  ccoip_master_state.cpp  ccoip_packet_buffer.cpp  ccoip_packets.cpp  crc32_cpu.cpp  guarded_alloc.cpp  quantize.cpp  quantize_kernels.cpp  reduce.cpp  reduce_kernels.cpp  simplehash_cpu.cpp  simplehash_cuda.cpp  topolgy_optimizer.cpp
ccoip/src/cpp/crc32/: crc32_amd64_sse42.cpp  crc32_amd64_sse42_pcmul.cpp  crc32_arm64.cpp  crc32_cpu.cpp
ccoip/src/cpp/simplehash/: simplehash_cpu.cpp  simplehash_cuda.cpp
ccoip/src/cuda/: simplehash_cuda.cu
ccoip/tests/: CMakeLists.txt  test_accept_new_peers.cpp
ccoip/tests/end_to_end/: CMakeLists.txt  port_guard.h  test_accept_new_peers.cpp  test_all_reduce.cpp  test_peer_groups.cpp  test_shared_state_distribution.cpp
ccoip/tests/unit_tests/: CMakeLists.txt
ccoip/tests/unit_tests/crc32/: CMakeLists.txt  crc32_cpu_test.cpp  crc32_test.cpp
ccoip/tests/unit_tests/fvn1a_hash/: CMakeLists.txt  fvn1a_test.cpp
ccoip/tests/unit_tests/quantize/: CMakeLists.txt  quantization_test.cpp
ccoip/tests/unit_tests/simple_hash/: CMakeLists.txt  simplehash_cpu_test.cu  simplehash_cpu_test_no_cuda.cpp  simplehash_cuda_test.cpp
ccoip_master/: CMakeLists.txt
ccoip_master/src/: main.cpp
cmake/: macos-openmp.cmake  testing.cmake
cmake/toolchains/: x86_64-cross-arm64-toolchain.cmake
common_utils/: CMakeLists.txt
common_utils/src/: fmemcopy.cpp
docs/md/: 01_Introduction.md  1_Introduction.md  2_GettingStarted.md  3_CoreConcepts_and_Architecture.md  4_PCCL_API_Overview.md  5_ImplementationNotes.md  6_Examples_and_Tutorials.md  7_Diloco.md  8_CommonFootguns.md
docs/md/02-Getting Started/: 01_Installation_and_build.md  02_GettingStarted.md  03_Basic_HelloWorld.md
docs/md/04-API Overview/: 01_PCCL_API_Overview.md  02_ErrorHandling.md
docs/md/05-ImplementationNotes/: 01_ImplementationNotes.md  02_TinySockets.md  03_MasterOrchestration.md  04_ConcurrencyModel.md
docs/md/06-Examples & Tutorials/: 01_Examples_and_Tutorials.md  02_HelloWorld_cpp.md  03_HelloWorld_py.md  04_MnistExample.md  05_ConcurrentAllReduce.md
docs/md/07-DiLoCo - Distributed Low-Communication/: 01-Intro.md  03-AsyncDiloco.md
docs/md/07-DiLoCo: Distributed Low-Communication/: 02-SyncDiloco.md  03-StreamingDiloco.md
include/: pccl.h  pccl_status.h
internal/: pccl_internal.h  pccl_internal.hpp
log/: CMakeLists.txt
log/include/: pccl_log.hpp
log/src/: pccl_log.cpp
python/: gen_bindings.py  requirements.txt
python/examples/: simple_test.py
python/examples/nanogpt_diloco/: async_config_gpu0.json  async_config_gpu1.json  async_config_gpu2.json  async_diloco.py  default_config_gpu0.json  default_config_gpu1.json  default_config_other.json  launch_fsdp2.sh  prepare_owt_dataset.py  requirements.txt  sync_config_gpu0.json  sync_config_other.json  sync_diloco.py  sync_diloco_concat.py  sync_diloco_fsdp.py  sync_master.py  train_pccl.py
python/examples/nanogptddp/: compare_dump.py  default_config.json  default_config_cpu.json  default_config_gpu0.json  default_config_gpu1.json  model.py  profiler.py  requirements.txt  train.py  train_nccl.py  train_pccl.py
python/examples/simulate_10b/: peer.py  profiler.py
python/framework/: build_wheel.sh  gen_bindings.py  requirements.txt  setup.cfg  setup.py
python/framework/pccl/: __init__.py  _cdecls.py  _loader.py  _pccl.py  master.py
python/pccl/: __capi.py  __init__.py  _cdecls.py  _loader.py
python/scratchspace/: ring_reduce_impl.py  test_all_reduce.py
python/scratchspace/cpp/: CMakeLists.txt  ring_reduce_experiment.cpp  ring_reduce_impl_test.cpp
python/scratchspace/py/: ring_reduce_impl_mailbox.py  (+3 more)
python/tests/: pccl_test.py  peer.py  requirements.txt  simple_reduce.py
src/: pccl.cpp
tests/: CMakeLists.txt
tests/basic_reduce_test/: CMakeLists.txt  main.cpp
tests/c99_compat/: CMakeLists.txt  enforce_c99_compat.c
tests/concurrent_reduce_test/: CMakeLists.txt  main.cpp
tinysockets/: CMakeLists.txt
tinysockets/include/: network_order_utils.hpp  tinysockets.hpp  win_sock_bridge.h
tinysockets/internal/: ccoip_utils.hpp  win_sock_bridge.h
tinysockets/lockfree_map/: CMakeLists.txt
tinysockets/lockfree_map/include/: lockfree_map.hpp
tinysockets/mpsc/: CMakeLists.txt
tinysockets/mpsc/include/: MPSCQueue.hpp
tinysockets/spsc/: CMakeLists.txt
tinysockets/src/: blocking_client_socket.cpp  blocking_server_socket.cpp  ccoip_utils.cpp  client_socket.cpp  multiplexed_socket.cpp  poll.cpp  queued_client_socket.cpp  server_socket.cpp
tinysockets/tests/: CMakeLists.txt  test_blocking_io_socket.cpp  test_queued_socket.cpp  test_server_socket.cpp
(+27 files in other folders)
