[project]
license = "MIT"

[metadata]
name = pypccl
version = 1.0.0
author = Michael Keiblinger, Mario Sieg
author_email = mike@primeintellect.ai, mario@primeintellect.ai
description = Fault tolerant Collective Communications over IP
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PrimeIntellect-ai/pccl
project_urls =
    Bug Tracker = https://github.com/PrimeIntellect-ai/pccl/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries
    Topic :: System :: Distributed Computing
python_requires = >=3.12
include_package_data = True
zip_safe = False

