# test accept new peers
add_sanitized_gtest(test_accept_new_peers test_accept_new_peers.cpp)
target_link_libraries(test_accept_new_peers PRIVATE ccoip_private)
target_include_directories(test_accept_new_peers PRIVATE ${CMAKE_CURRENT_LIST_DIR})

# test shared state distribution
add_sanitized_gtest(test_shared_state_distribution test_shared_state_distribution.cpp)
target_link_libraries(test_shared_state_distribution PRIVATE ccoip_private)
target_include_directories(test_shared_state_distribution PRIVATE ${CMAKE_CURRENT_LIST_DIR})

# test all reduce
add_sanitized_gtest(test_all_reduce test_all_reduce.cpp)
target_link_libraries(test_all_reduce PRIVATE ccoip_private)
target_include_directories(test_all_reduce PRIVATE ${CMAKE_CURRENT_LIST_DIR})